Added Android platform and new map templates

--- a/app/templates/tab-map.html
+++ b/app/templates/tab-map.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Disneyland Beer Map" ng-controller="DashCtrl">
+<ion-view view-title="Beer Map" ng-controller="MapCtrl">
     <ion-content class="padding">
-        <h1>Disneyland Beer Guide</h1>
+        <h1>Disneyland Beer Guide Map</h1>
 
         <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
 
